Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9613

keyfile without any keys crashes mysqld on loading file_key_management plugin

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.1.11
    • 10.1.13
    • Encryption
    • None
    • linux
    • 10.1.13

    Description

      Providing an empty keyfile, or a keyfile that only contains comments but no actual keys, crashes mysqld when loading the file_key_management plugin.

      Backtrace:

      /usr/local/mysql-maria-10.1.11/bin/mysqld(my_print_stacktrace+0x29)[0x558c97ad1a99]
      /usr/local/mysql-maria-10.1.11/bin/mysqld(handle_fatal_signal+0x34d)[0x558c976c1f9d]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x10d10)[0x7fe73a38cd10]
      /usr/local/mysql-maria-10.1.11/lib/plugin/file_key_management.so(Parser::parse_file(Dynamic_array<keyentry>*, char const*)+0xa3)[0x7fe725dfd0e3]
      /usr/local/mysql-maria-10.1.11/lib/plugin/file_key_management.so(Parser::parse(Dynamic_array<keyentry>*)+0x63)[0x7fe725dfd193]
      /usr/local/mysql-maria-10.1.11/lib/plugin/file_key_management.so(+0x1812)[0x7fe725dfc812]
      /usr/local/mysql-maria-10.1.11/bin/mysqld(initialize_encryption_plugin(st_plugin_int*)+0x32)[0x558c9767aa32]
      /usr/local/mysql-maria-10.1.11/bin/mysqld(+0x40583b)[0x558c9756a83b]
      /usr/local/mysql-maria-10.1.11/bin/mysqld(+0x406898)[0x558c9756b898]
      /usr/local/mysql-maria-10.1.11/bin/mysqld(mysql_install_plugin(THD*, st_mysql_lex_string const*, st_mysql_lex_string const*)+0x33b)[0x558c9756bd4b]
      /usr/local/mysql-maria-10.1.11/bin/mysqld(mysql_execute_command(THD*)+0x3fa0)[0x558c9755b400]
      mysys/stacktrace.c:247(my_print_stacktrace)[0x558c9755ff9c]
      sql/sql_parse.cc:5593(mysql_execute_command(THD*))[0x558c97562f17]
      sql/sql_parse.cc:1111(do_command(THD*))[0x558c97563643]
      sql/sql_connect.cc:1349(do_handle_one_connection(THD*))[0x558c9761a1bc]
      sql/sql_connect.cc:1263(handle_one_connection)[0x558c9761a387]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x76aa)[0x7fe73a3836aa]
      /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d)[0x7fe739a2eeed]

      Attachments

        Activity

          Hi Sergei,

          Can you please review the patch for this bug on the mailing list.

          cvicentiu Vicențiu Ciorbaru added a comment - Hi Sergei, Can you please review the patch for this bug on the mailing list.

          ok to push!

          serg Sergei Golubchik added a comment - ok to push!
          cvicentiu Vicențiu Ciorbaru added a comment - Fixed with: https://github.com/MariaDB/server/commit/16ddd1824c679751deb0ab89b40c1375f6540c3f

          People

            cvicentiu Vicențiu Ciorbaru
            hholzgra Hartmut Holzgraefe
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.