MDEV-9613: keyfile without any keys crashes mysqld on loading file_key_management plugin

Code was assuming that the keys file would contain at least one valid
key. This caused a Dynamic_array::at(0) call that lead to the crash.